syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.android.platform";
option java_outer_classname = "UserProto";

package user;

service UserGrpcService {
	rpc Register (RegisterRequest) returns (RegisterReply);
}

message RegisterRequest{
	string phoneNumber = 1;
	string macAddress = 2;
	string fcmToken = 3;
}

message RegisterReply {
	string token = 1;
}

